# CPP-HOTEL-MANAGEMENT-SYSTEM-IN-TURKISH

./: CMakeLists.txt  Makefile  README.md  hms3.sln  main.cpp  main_web.cpp
hms3/: hms3  hms3.cpp  hms3.vcxproj  hms3.vcxproj.filters
hms3/x64/Debug/: hms3.exe.recipe  hms3.ilk  vc143.idb
hms3/x64/Debug/hms3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  hms3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/application/use-cases/: CheckInUseCase.cpp  CheckInUseCase.h  CheckOutUseCase.cpp  CheckOutUseCase.h  OdaEkleUseCase.cpp  OdaEkleUseCase.h
src/domain/entities/: Musteri.cpp  Musteri.h  Oda.cpp  Oda.h
src/domain/repositories/: IOdaRepository.h
src/domain/services/: OtelDomainService.cpp  OtelDomainService.h
src/infrastructure/repositories/: InMemoryOdaRepository.cpp  InMemoryOdaRepository.h
src/presentation/: OtelConsoleUI.cpp  OtelConsoleUI.h
src/presentation/web/: WebServer.cpp  WebServer.h
